--- a/WorldCinemafinaly (mobile)/app/src/main/res/values/strings.xml
+++ b/WorldCinemafinaly (mobile)/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WorldCinema finaly</string>
+    <string name="register">Register</string>
+    <string name="next">NEXT</string>
 </resources>
